<resources>
    <string name="app_name">Intoxecure</string>
    <string name="channel_name">Intoxecure</string>
    <string name="channel_description">Intoxecure Service Channel</string>
    <string name="channel_id">com.intoxecure.intoxecure</string>
    <string name="schedule_button">Schedule</string>
    <string name="settings_button">Settings</string>
    <string name="profile_button">Profile</string>
    <string name="about_button">About</string>
    <string name="no_account_link">No Account? Register Here</string>
    <string name="login_button">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_trustee">Change Trustees</string>
    <string name="contact_imageview">Profile Pic</string>
    <string name="placeholder">Placeholder</string>
    <string name="trustee_text">Trustees</string>
    <string name="change_button">Change</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_sms_title">SMS settings</string>
    <string name="pref_summary_enable_sms">When enabled, the app sends emergency text message (assuming there is enough balance) to all trustees stating that you may be drunk.</string>
    <string name="pref_title_enable_sms">Enable SMS</string>
    <string name="pref_sensor_title">Sensor settings</string>
    <string name="pref_title_sensor_sensitivity">Sensor sensitivity</string>
    <item name="pref_default_sensor_sensitivity" format="float" type="string">0.5</item>
</resources>
