<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/toggleButton"
        android:layout_marginBottom="143dp"
        android:text="@string/schedule_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button3"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/toggleButton"
        android:layout_alignRight="@+id/toggleButton"
        android:layout_below="@+id/toggleButton"
        android:onClick="onProfileClick"
        android:text="@string/profile_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button4"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button3"
        android:layout_marginTop="27dp"
        android:onClick="onSettingsClick"
        android:text="@string/settings_button"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button5"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/button4"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3"
        android:text="@string/about_button"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light" />

    <ToggleButton
        android:id="@+id/toggleButton"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="270dp"
        android:layout_height="220dp"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:checked="false"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/toggleButton"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/toggleButton"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/intoxecure_logo_v3" />

</RelativeLayout>
